# parallel-computing

./: .gitignore  1.16.1.icc.o246380  1000-1000-1000.o265307  10K-10K-10K.o265310  16.1.1.icc.o246372  2.8.1.icc.o246378  4.4.1.icc.o246376  5000.5000.1.gcc.o246182  5000.5000.1.icc.o246189  5000.5000.1.par.o246181  5000.5000.10.gcc.o246211  5000.5000.10.icc.o246194  5000.5000.16.gcc.o246213  5000.5000.16.icc.o246196  5000.5000.2.gcc.o246195  5000.5000.2.icc.o246191  5000.5000.20.gcc.o246201  5000.5000.20.icc.o246198  5000.5000.4.gcc.o246199  5000.5000.4.icc.o246192  5000.5000.8.gcc.o246210  5000.5000.8.icc.o246193  5K-5K-5K.o265326  8.2.1.icc.o246374  CMakeLists.txt  Makefile  README.txt  arch-env.sh  conway  core.25036  cuda-make.sh  cuda_test.c  run-cmake.sh  run-hw4.sh  run-hw5.sh  run-release-intel.sh  run-release.sh  run-test.sh  saxpy  saxpy.cu  (+3 more)
include/: game.h  main.h
main/: main.c  main.h
misc/: vecAdd.c
release/: mpi-nonblocking-1.o254437
results/: mpi-blocking-1.o254101  mpi-blocking-1.o257437  mpi-blocking-16.o254403  mpi-blocking-16.o257030  mpi-blocking-2.o254357  mpi-blocking-2.o257421  mpi-blocking-32.o254371  mpi-blocking-4.o254364  mpi-blocking-4.o257051  mpi-blocking-8.o254365  mpi-blocking-8.o257038  mpi-nonblocking-1.o254437  mpi-nonblocking-1.o256930  mpi-nonblocking-16.o254989  mpi-nonblocking-16.o256993  mpi-nonblocking-2.o254443  mpi-nonblocking-2.o256951  mpi-nonblocking-32.o254990  mpi-nonblocking-4.o254450  mpi-nonblocking-4.o256980  mpi-nonblocking-8.o254986  mpi-nonblocking-8.o256987
src/: board.cu  draw.c  draw.h  game.c  game.cu  game.cuh  game.h  main.c  main.cu  main.cuh
